--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,42 +1,17 @@
-<div class="row">
-  <div class="col-md-6">
-    <h2>Login</h2>
+<h1>Login</h1>
 
-    <form class="form login-form">
-      <div class="form-group">
-        <label for="email-login">email:</label>
-        <input class="form-input" type="text" id="email-login" />
-      </div>
-      <div class="form-group">
-        <label for="password-login">password:</label>
-        <input class="form-input" type="password" id="password-login" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
-      </div>
-    </form>
+<form class="login-form">
+  <div class="form-group">
+    <label for="username-login">Username</label>
+    <input type="text" id="username-login" name="username">
   </div>
-  <div class="col-md-6">
-    <h2>Signup</h2>
-
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="name-signup">name:</label>
-        <input class="form-input" type="text" id="name-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
-      </div>
-    </form>
+  <div class="form-group">
+    <label for="password-login">Password</label>
+    <input type="password" id="password-login" name="password">
   </div>
-</div>
+  <div class="form-group">
+    <button type="submit">Login</button>
+  </div>
+</form>
 
-<script src="./js/login.js"></script>
+<p>Don't have an account? <a href="/signup">Sign up</a></p>
