--- a/views/partials/navigation.handlebars
+++ b/views/partials/navigation.handlebars
@@ -1,24 +1,23 @@
-<!-- Loop over each object in the projects array -->
-{{#each projects as |project| }}
-<div class="row mb-4 project">
-  <div class="col-md-5">
-    <h2>
-      <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      {{{get_emoji}}}
-      <a href="/project/{{project.id}}">{{project.name}}</a>
-    </h2>
-    <p>
-      <span for="img" aria-label="money">💲</span>
-      <!-- Pass needed_funding value to the helper function -->
-      <span class="dollar-amount">{{format_amount project.needed_funding}}</span>
-      needed!
-    </p>
-    <p>Created by {{project.user.name}} on {{format_date project.date_created}}</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="/">Tech Blog</a>
+
+  <div class="collapse navbar-collapse">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a id="home-nav" class="nav-link" href="/">Home</a>
+      </li>
+      <li class="nav-item">
+        <a id="dashboard-nav" class="nav-link" href="#">Dashboard</a>
+      </li>
+      {{#if logged_in}}
+        <li class="nav-item">
+          <a id="logout-nav" class="nav-link" href="#">Logout</a>
+        </li>
+      {{else}}
+        <li class="nav-item">
+          <a id="login-nav" class="nav-link" href="/login">Login</a>
+        </li>
+      {{/if}}
+    </ul>
   </div>
-  <div class="col-md-7">
-    <p>
-      {{project.description}}
-    </p>
-  </div>
-</div>
-{{/each}}
+</nav>
