--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,14 +1,17 @@
-<div class="text-center">
-  <h2>{{name}}</h2>
-  <p>{{{get_emoji}}}</p>
-  <p>{{description}}</p>
-  <p>Created by {{user.name}} on {{format_date date_created}}</p>
-  <p>
-    <span for="img" aria-label="money">💲</span>
-    <span class="dollar-amount">{{format_amount needed_funding}}</span>
-    needed
-  </p>
-  <p>
-    <button class="btn btn-primary">Fund this Project!</button>
-  </p>
-</div>
+<h1>Sign Up</h1>
+
+<form class="signup-form">
+  <div class="form-group">
+    <label for="username-signup">Username</label>
+    <input type="text" id="username-signup" name="username">
+  </div>
+  <div class="form-group">
+    <label for="password-signup">Password</label>
+    <input type="password" id="password-signup" name="password">
+  </div>
+  <div class="form-group">
+    <button type="submit">Sign Up</button>
+  </div>
+</form>
+
+<p>Already have an account? <a href="/login">Login</a></p>
