working on debugging some of the routes and information

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
 
 <body>
     <!-- Navigation -->
-    {{> partials/navigation}}
+    {{> navigation}}
 
     <!-- Main Content -->
     {{{body}}}
