--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 <h1>Login</h1>
 
-<form class="login-form">
+<form class="login-form" id="login-form">
   <div class="form-group">
     <label for="username-login">Username</label>
     <input type="text" id="username-login" name="username">
