--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,6 +1,6 @@
 <h1>Sign Up</h1>
 
-<form class="signup-form">
+<form class="signup-form" id="signup-form">
   <div class="form-group">
     <label for="username-signup">Username</label>
     <input type="text" id="username-signup" name="username">
