--- a/views/Dashboard.handlebars
+++ b/views/Dashboard.handlebars
@@ -3,6 +3,6 @@
 {{#each posts as |post|}}
   <div class="post">
     <h2>{{post.title}}</h2>
-    <p>Created by {{post.username}} on {{post.created_at}}</p>
+    <p>Created by {{post.user.username}} on {{format_date post.createdAt}}</p>
   </div>
 {{/each}}
