--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,7 +3,7 @@
 {{#each posts as |post|}}
   <div class="post">
     <h2>{{post.title}}</h2>
-    <p>Created by {{post.username}} on {{post.created_at}}</p>
+    <p>Created by {{post.user.username}} on {{format_date post.createdAt}}</p>
     <p>{{post.body}}</p>
   </div>
 {{/each}}
