--- a/views/partials/post.handlebars
+++ b/views/partials/post.handlebars
@@ -1,5 +1,5 @@
 <div class="post">
   <h2>{{title}}</h2>
   <p>{{body}}</p>
-  <p><small>Posted by {{username}} on {{created_at}}</small></p>
+  <p><small>Posted by {{post.username}} on {{post.createdAt}}</small></p>
 </div>
