--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,9 +2,10 @@
 
 {{#each posts as |post|}}
   <div class="post">
-    <h2>{{post.title}}</h2>
-    <p>Created by {{post.user.username}} on {{format_date post.createdAt}}</p>
-    <p>{{post.body}}</p>
+    <a href="/post/{{post.id}}">
+      <h2>{{post.title}}</h2>
+      <p>Created by {{post.user.username}} on {{format_date post.createdAt}}</p>
+      <p>{{post.body}}</p>
+    </a>
   </div>
 {{/each}}
-
