--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,7 @@
 <h1>Your Dashboard</h1>
 
+<button onclick="window.location.href='/newpost'">Add Post</button>
+
 {{#each posts as |post|}}
   <div class="post">
     <h2>{{post.title}}</h2>
