--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -6,5 +6,7 @@
   <div class="post">
     <h2>{{post.title}}</h2>
     <p>Created by {{post.user.username}} on {{format_date post.createdAt}}</p>
+    <p>{{post.body}}</p>
+    <a href="/post/edit/{{post.id}}">Edit Post</a>
   </div>
 {{/each}}
