--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,12 +1,20 @@
-<h1>Your Dashboard</h1>
-
-<button onclick="window.location.href='/newpost'">Add Post</button>
-
-{{#each posts as |post|}}
-  <div class="post">
-    <h2>{{post.title}}</h2>
-    <p>Created by {{post.user.username}} on {{format_date post.createdAt}}</p>
-    <p>{{post.body}}</p>
-    <a href="/post/edit/{{post.id}}">Edit Post</a>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h1>Dashboard</h1>
+    </div>
   </div>
-{{/each}}
+  <div class="row">
+    <div class="col-md-12">
+      {{#each posts}}
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">{{this.title}}</h5>
+            <p class="card-text">{{this.body}}</p>
+            <a href="/post/edit/{{this.id}}" class="btn btn-primary">Edit</a>
+          </div>
+        </div>
+      {{/each}}
+    </div>
+  </div>
+</div>
