--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -1,10 +1,18 @@
-<h1>Edit Post</h1>
-
-<form class="post-form" id="post-form">
-  <label for="title">Title:</label><br>
-  <input type="text" id="title" name="title" value="{{post.title}}" required><br>
-  <label for="body">Body:</label><br>
-  <textarea id="body" name="body" required>{{post.body}}</textarea><br>
-  <input type="submit" value="Update">
-  <button id="delete-post">Delete</button>
-</form>
+<div class="container my-4">
+    <h1 class="text-center">Edit Post</h1>
+    
+    <form class="post-form" id="post-form">
+        <div class="form-group">
+            <label for="title">Title:</label>
+            <input type="text" id="title" name="title" value="{{post.title}}" class="form-control" required>
+        </div>
+        
+        <div class="form-group">
+            <label for="body">Body:</label>
+            <textarea id="body" name="body" class="form-control" required>{{post.body}}</textarea>
+        </div>
+        
+        <button type="submit" class="btn btn-primary">Update</button>
+        <button id="delete-post" class="btn btn-danger">Delete</button>
+    </form>
+</div>
