--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,17 +1,21 @@
-<h1>Login</h1>
-
-<form class="login-form" id="login-form">
-  <div class="form-group">
-    <label for="username-login">Username</label>
-    <input type="text" id="username-login" name="username">
-  </div>
-  <div class="form-group">
-    <label for="password-login">Password</label>
-    <input type="password" id="password-login" name="password">
-  </div>
-  <div class="form-group">
-    <button type="submit">Login</button>
-  </div>
-</form>
-
-<p>Don't have an account? <a href="/signup">Sign up</a></p>
+<div class="container my-4">
+    <h1 class="text-center mb-4">Login</h1>
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <form class="login-form" id="login-form">
+                <div class="form-group">
+                    <label for="username-login">Username</label>
+                    <input type="text" id="username-login" name="username" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="password-login">Password</label>
+                    <input type="password" id="password-login" name="password" class="form-control">
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Login</button>
+                </div>
+            </form>
+            <p class="text-center">Don't have an account? <a href="/signup">Sign up</a></p>
+        </div>
+    </div>
+</div>
