--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -1,9 +1,20 @@
-<h1>Create New Post</h1>
-
-<form class="post-form" id="post-form">
-  <label for="title">Title:</label><br>
-  <input type="text" id="title" name="title" required><br>
-  <label for="body">Body:</label><br>
-  <textarea id="body" name="body" required></textarea><br>
-  <input type="submit" value="Submit">
-</form>
+<div class="container my-4">
+    <h1 class="text-center mb-4">Create New Post</h1>
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <form class="post-form" id="post-form">
+                <div class="form-group">
+                    <label for="title">Title:</label>
+                    <input type="text" id="title" name="title" class="form-control" required>
+                </div>
+                <div class="form-group">
+                    <label for="body">Body:</label>
+                    <textarea id="body" name="body" class="form-control" required></textarea>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
