--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,17 +1,19 @@
-<h1>Sign Up</h1>
+<div class="container my-4">
+    <h1 class="text-center mb-4">Sign Up</h1>
 
-<form class="signup-form" id="signup-form">
-  <div class="form-group">
-    <label for="username-signup">Username</label>
-    <input type="text" id="username-signup" name="username">
-  </div>
-  <div class="form-group">
-    <label for="password-signup">Password</label>
-    <input type="password" id="password-signup" name="password">
-  </div>
-  <div class="form-group">
-    <button type="submit">Sign Up</button>
-  </div>
-</form>
+    <form class="signup-form" id="signup-form">
+        <div class="form-group">
+            <label for="username-signup">Username</label>
+            <input type="text" id="username-signup" name="username" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="password-signup">Password</label>
+            <input type="password" id="password-signup" name="password" class="form-control">
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary">Sign Up</button>
+        </div>
+    </form>
 
-<p>Already have an account? <a href="/login">Login</a></p>
+    <p class="text-center">Already have an account? <a href="/login">Login</a></p>
+</div>
