--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col-md-12">
       <h1>Dashboard</h1>
+      <a href="/newpost" class="btn btn-primary">Create New Post</a> 
     </div>
   </div>
   <div class="row">
